@@ -66,4 +66,3 @@ emitter Eye
 		}
 	}
 }
-
